@@ -31,3 +31,6 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 * V1.21.4
 - Slight rename of application to Matrix Brandy, to distinguish between this
   and the "base" version from Sourceforge, and other forks.
+- MOUSE commands no longer error as unsupported. Most now no-op, but MOUSE X, Y, B[, C]
+  returns mouse position and button state. If specified, C contains a centisecond counter.
+  (In this implementation, it equals the value of TIME).
